--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <div class="container">
-            <div class="logo">Watermelons</div>
+            <div class="logo">Watermelon</div>
             <ul class="nav">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
